# fpga-matrix-mult

./: .gitignore  README.md  env.sh
C-prazor/: .gitignore  Makefile  env.sh  env.sh~  matMul.c  matMul.c~  matMul.power.txt  matMul.vcd
prazor-tests/: .gitignore  Makefile  energyshim.c  energyshim.h  matMul.c  zynq_utils.h
pure/: .gitignore  Makefile  currentprobe-client.c  currentprobe-client.h  energyshim.c  energyshim.h  main.cpp  matMul  matMul.c  matMul_cpu.c  matrix.h
tlm/: Makefile  Makefile.def  ex3.cpp  matMul  matMul.cpp  matMul_2x2.h  matMul_2x2.h~  matMul_chained.h
utils/: currentprobe-client.c  currentprobe-client.h  zynq_utils.h
vhls/: .gitignore  Makefile.am  README.md  config.notes  configure.ac
vhls/boards/parallella/: DDR3_micron_32M_8B_x32_parallella.ini  dramsim.ini
vhls/boards/parallella/linux/: COMPILE-HELP.md  Makefile  simple.dts
vhls/doc/parallela/: parallela_systemc.tex
vhls/images/: Makefile.inc  Makefile.inc.arm  Makefile.inc.native  Makefile.inc.or1k  Makefile.inc.x86_64  __aeabi_read_tp.S  arm-features.h  arm_abi_runtime.c  energyshim.c  energyshim.h
vhls/src/: Makefile.am  vhls.cpp
vhls/src/arm/: Makefile.am  arm_L2Cpl310.cpp  arm_L2Cpl310.h  arm_abt.cpp  arm_abt.h  arm_ccache.cpp  arm_ccache.h  arm_cortex_a9.cpp  arm_cortex_a9.h  arm_cp14.cpp  arm_cp14.h  arm_cp15.cpp  arm_cp15.h  arm_mmu.cpp  arm_mmu.h  arm_scu.cpp  arm_scu.h  arm_timers.cpp  arm_timers.h  armcore_tlm.cpp  armcore_tlm.h  armdis.cpp  armdis.h  armisa.cpp  armisa.h  armthumb.cpp  backdoor_nops.C  backdoor_reads.C  backdoor_writes.C  fastiss.cpp  gic_arm_tlm.cpp  gic_arm_tlm.h  sclr_arm_tlm.cpp  sclr_arm_tlm.h
vhls/src/bus/: Makefile.am  README.txt  busmux64.cpp  busmux64.h  crossbar.cpp  crossbar.h  hypertransport.cpp  hypertransport.h  opteron_messages.h  opteron_msg_mm.cpp  sri.cpp  sri.h  vmunit64.cpp  vmunit64.h
vhls/src/crt/: README.txt
vhls/src/crt/djgthreads/: README.txt  djgthread.c  djgthread.h
vhls/src/crt/djgthreads/tests/: barriertest.c
vhls/src/crt/prlibc/: crt0.c  dummy_isr.c  prlibc.c  prstdio.h  scanf.c  strtod.c  strtol.c
vhls/src/crt/prlibc/ARM32/: archglue.c  archglue.h
vhls/src/crt/prlibc/or1k/: archglue.c  archglue.h  archstart.S  verysimple.S
vhls/src/crt/prlibc/x86_64/: archglue.c
vhls/src/crt/uClibc/: uclibc_shim.c
vhls/src/crt/uClibc/arch/arm32/: arm32_crt.S  thumb_crt.S
vhls/src/crt/uClibc/arch/or1k/: or1k_crt.S
vhls/src/crt/uClibc/arch/x86_64/: uclibc_crt.S
vhls/src/crt/uClibc/include/bits/: sysnum.h  uClibc_config.h
vhls/src/devicedrivers/uart64_cbg/: uart64_driver.c  uart64_driver.h
vhls/src/dramsim2/: Makefile.am  dramsim_sc_wrapper.cpp  dramsim_sc_wrapper.h
vhls/src/gdbrsp/: GdbServerSC.cpp  GdbServerSC.h  Makefile.am  RspConnection.cpp  SpeedoDebug.h  SpeedoDebugBase.h  Utils.cpp  gdbrsp.cpp  gdbrsp.h  vhls_soc_debug.cpp  vhls_soc_debug.h  vhls_soc_debug_empty.cpp  vhls_soc_debug_spr.h
vhls/src/gdbrsp/speedotest/: speedotest.cpp
vhls/src/io/: Makefile.am  README.txt  sdio_cbg.cpp  sdio_cbg.h  uart64_cbg.cpp  uart64_cbg.h
vhls/src/memories/: Makefile.am  README.txt  base_mmu.h  base_mmu_tlm.cpp  base_mmu_tlm.h  ccache.cpp  ccache.h  consistent_cache64.cpp  consistent_cache64.h  dram64_cbg.cpp  dram64_cbg.h  generic_tlm_mem.cpp  generic_tlm_mem.h  hammer_cache64.cpp  hammer_cache64.h  memloaders.cpp  memloaders.h  memories_extensions.h  scu.cpp  scu.h  secondary_cache_with_directory.cpp  secondary_cache_with_directory.h  smallram.h  sram64_cbg.cpp  sram64_cbg.h
vhls/src/mips64/: Makefile.am
vhls/src/mips64/mips64isa/: Makefile.am  backdoor_nops.C  backdoor_reads.C  backdoor_writes.C  mips64.cpp  mips64.h  mips64_btlm.cpp  mips64_btlm.h
vhls/src/or1k/: Makefile.am  backdoor_nops.C  backdoor_reads.C  backdoor_writes.C  remotecontrol_or1k.cpp  remotecontrol_or1k.h  spr_defs.h
vhls/src/or1k/fastiss/: Makefile.am  OR1200F.cpp  OR1200F.h  config.h  iss.C  main.cpp  or32.c  or32.h  orsim.cpp  orsim.h
vhls/src/or1k/verilated/: Makefile.am  OR1200V.cpp  OR1200V.h  OrpsocAccess.cpp  OrpsocAccess.h
vhls/src/or1k/verilated/vcpp/: Makefile.am  Vor1200_top.cpp  Vor1200_top.h  Vor1200_top__ALLcls.cpp  Vor1200_top__ALLsup.cpp  Vor1200_top__Inlines.h  Vor1200_top__Syms.cpp  Vor1200_top__Syms.h  Vor1200_top_or1200_cpu.cpp  Vor1200_top_or1200_cpu.h  Vor1200_top_or1200_ctrl.cpp  Vor1200_top_or1200_ctrl.h  Vor1200_top_or1200_rf.cpp  Vor1200_top_or1200_rf.h  Vor1200_top_or1200_rfram_generic.cpp  Vor1200_top_or1200_rfram_generic.h  Vor1200_top_or1200_top.cpp  Vor1200_top_or1200_top.h  verilated_config.h
vhls/src/platform/: Makefile.am  platform.h
vhls/src/platform/arm/: Makefile.am
vhls/src/platform/arm/zynq/: Makefile.am
vhls/src/platform/arm/zynq/parallella/: Makefile.am  zynq.cpp  zynq.h
vhls/src/platform/risc/: Makefile.am
vhls/src/platform/risc/or1k/: Makefile.am  or1k.cpp  or1k.h
vhls/src/platform/x86/: Makefile.am
vhls/src/platform/x86/amd/: Makefile.am
vhls/src/platform/x86/amd/phenom/: Makefile.am  phenom.cpp  phenom.h
vhls/src/plugins/: matMul_2x2.h  matMul_chained.h  plugins.h
vhls/src/tenos/: COREISA_IF.h  Makefile.am  argv_backdoor.cpp  argv_backdoor.h  cpu_busaccess.cpp  cpu_busaccess.h  generic_branch_predictor.cpp  generic_branch_predictor.h  io_backdoor.cpp  io_backdoor.h  llsc_extension.h  lt_delay.h  prazor.h  proc_id_extension.h  ptrace_v1.h  pw_confidence_switcher.h  pw_debug.h  socdam_bdoor_mapping.h  speedo_api.cpp  speedo_api.h  speedo_reg_mapping.h  tenos.cpp  tenos.h  tenos_cmds.h
vhls/src/x86/: Makefile.am  backdoor_nops.C  backdoor_reads.C  backdoor_writes.C  bench1.h  bench2.h  branchpred.h  config.cpp  config.h  datastore.cpp  datastore.h  dcache-amd-k8.h  dcache.h  decode-complex.cpp  decode-core.cpp  decode-fast.cpp  decode-sse.cpp  decode-x87.cpp  decode.h  globals.h  kernel.cpp  kernel.h  klibc.cpp  klibc.h  loader.h  logic.h  mathlib.cpp  mathlib.h  mm-private.h  mm.cpp  mm.h  ooocore.h  osbackdoor.h  ptlcalls.h  ptlhwdef.cpp  ptlhwdef.h  ptlsim.cpp  ptlsim.h  ptlxen.h  seqcore.cpp  (+10 more)
vhls/tests/: Makefile.am  test1.test
